--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: You
-middle_name: R.
-last_name: Name
+first_name: Vishal
+middle_name:
+last_name: Saini
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  The best way to reach me is through **LinkedIn**, or feel free to send me an **email**!
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
@@ -16,10 +16,10 @@ footer_text: >
   Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: 🐤 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://alshedivat.github.io # the base hostname & protocol for your site
-baseurl: /al-folio # the subpath of your site, e.g. /blog/. Leave blank for root
+baseurl: /about # the subpath of your site, e.g. /blog/. Leave blank for root
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path: # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 back_to_top: true # set to false to disable the back to top button
@@ -86,8 +86,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio # blog_name will be displayed in your blog page
-blog_description: a simple whitespace theme for academics
+blog_name: Planet of Curiosity # blog_name will be displayed in your blog page
+blog_description: '''The important thing is not to stop questioning. Curiosity has its own reason for existence. One cannot help but be in awe when he contemplates the mysteries of eternity, of life, of the marvelous structure of reality. It is enough if one tries merely to comprehend a little of this mystery each day. Never lose a holy curiosity. <br>— Albert Einstein'''
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
@@ -192,6 +192,8 @@ exclude:
   - README.md
   - readme_preview/
   - vendor
+  - publications.md
+  - teaching.md
 keep_files:
   - CNAME
   - .nojekyll
@@ -633,10 +635,10 @@ jsonresume:
   - basics
   - work
   - education
-  - publications
+#  - publications
   - projects
-  - volunteer
-  - awards
+#  - volunteer
+#  - awards
   - certificates
   - skills
   - languages
