--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,97 +1,94 @@
-- title: General Information
+- title: Contact & Objective
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
-    - name: Languages
-      value: English, German
+      value: Vishal
+    - name: Location
+      value: Panorama Court, Etobicoke, ON
+    - name: Email
+      value: its.vishal.ca@gmail.com
+    - name: LinkedIn
+      value: linkedin-vishal
+    - name: Objective
+      value: Aspiring Data Analytics and Machine Learning Practitioner with a strong passion for continuous learning and innovation. Seeking opportunities to gain practical experience in solving real-life problems.
 
-- title: Education
-  type: time_table
-  contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+---
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Capstone Project — Curriculum Bot (RAG-LLM)
+      institution: "Humber College - Information Technology Service (ITS)"
+      year: SEP 2024 – 3 Months
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - "Led a five-member team to develop a Retrieval-Augmented Generation (RAG) based chatbot to automate curriculum design research."
+        - "Enhanced the retrieval system by researching and experimenting with different retrieval methods and multi-stage re-ranking (DLM, TDILM, monoT5) for optimal performance and low latency."
+        - "Organized and facilitated weekly client meetings using Agile methodologies to gather requirements and share progress."
+        - "The chatbot successfully reduced faculty research time from 1 hour to 2 minutes with a content accuracy of 95%."
+        - "Tools and Technology: Langchain, LlamaIndex, ChromaDB, OpenAI GPT-4, Streamlit, Git and Github, Python, ClickUp."
+
+    - title: Data Analyst Intern
+      institution: "BlackCoffer, New Delhi, INDIA"
+      year: SEP 2023 – JAN 2024
       description:
-        - Description 1.
-        - Description 2.
+        - "Performed in-depth NLP analysis on unstructured text data from the company's website, including sentiment analysis, readability analysis, and keyword identification."
+        - "Built a Machine learning model using Latent Dirichlet Allocation (LDA) to identify key themes, improving content organization by 15%."
+        - "Provided actionable insights to inform more targeted and effective communication strategies."
+        - "Tools: Web Scraper BeautifulSoup, TextBlob, Pandas, Scikit-learn."
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
+---
 
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
+- title: Education
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: PG Certificate Artificial Intelligence and Machine Learning
+      institution: "Humber College North Campus, ON, CA"
+      year: DEC 2024 (Expected)
+      description:
+        - "Learned to make informed decisions based on Data Analysis and provide data driven solutions."
+        - "Gained hands-on experience with AWS Cloud Services (EC2, Lambda, SageMaker, GuardRail, CloudWatch)."
+        - "Projects: Uber Taxi Analysis, Twitter Post Sentimental Analysis, AWS Comprehend Project."
 
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
-      items:
-        - Max Planck Medal
+    - title: Bachelors of Science (Honors) Computer Science
+      institution: "University of Delhi, New Delhi, INDIA"
+      year: JULY 2023
+      description:
+        - "Core coursework included Software Engineering, Data Structure and Algorithms, Data Mining, and Traditional Machine Learning."
+        - "Programming Languages: Python, R, SQL, JavaScript, C++."
+        - "Mathematics: Linear Algebra, Calculus, and Probability and Statistics."
 
-- title: Academic Interests
+---
+
+- title: Technical Skills
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Core Programming
       items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - Python, R, SQL, JavaScript, C++
+    - title: Data & ML Frameworks
       items:
-        - Description 1.
-        - Description 2.
+        - "Data Analysis: Scikit Learn, Matplotlib, Seaborn, mlxtend"
+        - "Deep Learning: PyTorch, TensorFlow"
+        - "LLM Frameworks: Langchain, LlamaIndex"
+        - "NLP Frameworks: nltk, spaCy"
+    - title: Platforms & Tools
+      items:
+        - "Cloud Platforms: AWS SageMaker, GCP Big Query"
+        - "Big Data: PySpark"
+        - "Business Intelligence: PowerBI"
+        - "Databases: MySQL, ChromaDB"
 
-- title: Other Interests
+---
+
+- title: Soft Skills
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - Agile Framework, Scrum Methodology, Analytical Skills, Presentation Skills, Interpersonal Skills
+
+---
+
+- title: Certificates
+  type: list
+  contents:
+    - "Coursera - Generative AI for LLM"
+    - "Scaler Academy - Advance Python and SQL for Data Science"
